# OpenCppCoverage

./: CMakeLists.txt
CoverageTool/: CMakeLists.txt  CoverageTool.cpp  CoverageTool.vcxproj
CppCoverage/: BreakPoint.cpp  CodeCoverageRunner.cpp  CodeCoverageRunner.hpp  CoverageDataMerger.cpp  CoverageFilterManager.cpp  CoverageFilterSettings.cpp  CppCoverage.vcxproj  CppCoverageExport.hpp  DebugInformation.cpp  Debugger.cpp  ExceptionHandler.cpp  ExecutedAddressManager.cpp  ExecutedAddressManager.hpp  FileDebugInformation.cpp  HandleInformation.cpp  Options.cpp  Options.hpp  OptionsParser.cpp  Process.cpp  ProgramOptions.cpp  ProgramOptions.hpp  StartInfo.cpp  UnifiedDiffCoverageFilterManager.cpp  WildcardCoverageFilter.cpp  Wildcards.cpp
CppCoverageCross/: CMakeLists.txt  CoverageData.cpp  CoverageData.hpp  CoverageRate.cpp  CoverageRate.hpp  CoverageRateComputer.cpp  CoverageRateComputer.hpp  CppCoverageCross.vcxproj  CppCoverageException.cpp  CppCoverageException.hpp  CppCoverageExport.hpp  FileCoverage.cpp  FileCoverage.hpp  LineCoverage.cpp  LineCoverage.hpp  ModuleCoverage.cpp  ModuleCoverage.hpp
CppCoverageTest/: CodeCoverageRunnerTest.cpp  CppCoverageTest.cpp  DebugInformationTest.cpp  HandleInformationTest.cpp  OptionsParserConfigTest.cpp  OptionsParserPatternTest.cpp  OptionsParserTest.cpp
Exporter/: CMakeLists.txt  CoberturaExporter.cpp  ExporterException.hpp  ExporterExport.hpp  stdafx.h
Exporter/Binary/: BinaryExporter.cpp  CoverageData.proto  CoverageDataDeserializer.cpp  CoverageDataSerializer.cpp
Exporter/Html/: CTemplate.hpp  HtmlExporter.cpp  HtmlFile.cpp  HtmlFileCoverageExporter.cpp  HtmlFolderStructure.cpp  TemplateHtmlExporter.cpp  TemplateHtmlExporter.hpp
ExporterCross/: CMakeLists.txt  ExporterCross.vcxproj
ExporterCross/Html/: CTemplate.hpp  HtmlExporter.cpp  HtmlExporter.hpp  HtmlFile.cpp  HtmlFile.hpp  HtmlFileCoverageExporter.cpp  HtmlFileCoverageExporter.hpp  HtmlFolderStructure.cpp  HtmlFolderStructure.hpp  TemplateHtmlExporter.cpp  TemplateHtmlExporter.hpp
ExporterTest/: ExporterTest.cpp  TemplateHtmlExporterTest.cpp
FileFilter/: FileFilterException.hpp  FileFilterExport.hpp  LineFilter.cpp  LineFilter.hpp  ReleaseCoverageFilter.cpp  ReleaseCoverageFilter.hpp  RelocationsExtractor.cpp  RelocationsExtractor.hpp  UnifiedDiffCoverageFilter.cpp  UnifiedDiffParser.cpp
FileFilterCross/: CMakeLists.txt  File.hpp  FileFilter.vcxproj  FileFilterCross.vcxproj  FileFilterExport.hpp  FileInfo.hpp  UnifiedDiffCoverageFilter.cpp  stdafx.h
FileFilterTest/: UnifiedDiffParserTest.cpp
OpenCppCoverage/: OpenCppCoverage.cpp  OpenCppCoverage.vcxproj  OpenCppCoverageExport.hpp  main.cpp
OpenCppCoverageTest/: OpenCppCoverageConsoleTest.cpp  OpenCppCoverageTestTools.cpp
TestCoverageConsole/: TestBasic.cpp
TestHelper/: TemporaryPath.cpp
Tools/: MappedFile.cpp  Tool.cpp  ToolsExport.hpp
ToolsCross/: CMakeLists.txt  ExceptionBase.cpp  ExceptionBase.hpp  Log.cpp  ScopedAction.cpp  Tool.cpp  Tool.hpp  ToolsCross.vcxproj  ToolsException.hpp  ToolsExport.hpp  UniquePath.cpp  stdafx.h
ToolsLinux/: CMakeLists.txt  Tool.cpp  Tool.hpp  ToolsExport.hpp
ToolsTest/: ToolTest.cpp
old/CppCoverage/: CppCoverage.vcxproj
old/Exporter/: Exporter.vcxproj
old/FileFilter/: FileFilter.vcxproj
old/Tools/: Tools.vcxproj
